2011-06-23  Per Bothner  <bothner@kuling.bothner.com>

	* ModuleExp.java (evalModule): If evalModule1 reports an error,
	then pop any possibly new and erroneous declarations.
	This may fix Savannah bug #32209 "Class verification errors when
	reloading source files" - at least it fixes Charles Turner's
	simple test-case.

2011-06-21  Per Bothner  <bothner@kuling.bothner.com>

	* ConsumerTarget.java (compileWrite): Use stackType,
	which might be a ParameterizedType.
	* Language.java (declFromField): Use getLangTypeFor(Type) method,
	which handles parameterized types.
	* StackTarget.java (compileFromStack0): Use raw types to determine if
	casting is needed

2011-06-16  Per Bothner  <per@bothner.com>

	* Declaration.java (load): Generalize ALLOCATE_ON_STACK to handle
	targets other than StackTarget, plus stack growth by one.
	* ReferenceExp.java (compile): Disable compileWrite optimization
	if ALLOCATE_ON_STACK is set.

2011-06-15  Per Bothner  <per@bothner.com>

	Revert RETURN_ARG0 support.  Instead, use a new way of getting the
	samecode, by having Declaration#load emit a dup with the new
	ALLOCATE_ON_STACK flag is set.  This is simpler, reduces the risk
	of compile-time stack-overflow, has a simpler consistency check,
	and has the potential of recovery to a regular Let variable when the
	the assumptions of using ALLOCATE_ON_STACK aren't satisfied.
	* Declaration.java (ALLOCATE_ON_STACK): Ne flag.
	(load): Handle ALLOCATE_ON_STACK case.
	* LetExp.java (compile): Handle an ALLOCATE_ON_STACK variable.
	* ReferenceExp.java (ALLOCATE_ON_STACK_LAST): New flag.
	* ApplyExp.java: Revert RETURN_ARG0 support.
	* PrimProcedure.java: Likewise.

	* LetExp.java (compile): Re-write to store initial values eagerly in
	left-to-right order, rather than saving on stack and then popping all.
	This is simpler, plus may aid future pattern-matching.
	(compile_rest, needsInit): Removed methods.

	* ApplyExp.java (RETURN_ARG0): New flag.
	(calculateType): Handle RETURN_ARG0.