@@ -1,3 +1,8 @@
+2011-06-29  Per Bothner  <bothner@kuling.bothner.com>
+
+	* ClassExp.java (setTypes): Fix error where the same type was added
+	twice if ModuleExp.USE_DEFINED_CLASS is set.
+
 2011-06-23  Per Bothner  <bothner@kuling.bothner.com>
 
 	* ModuleExp.java (evalModule): If evalModule1 reports an error,
